# appdirs-stubs

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  formate.toml  pyproject.toml  repo_helper.yml  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
appdirs/: __init__.py
appdirs-stubs/: __init__.pyi
