[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "appdirs-stubs"
version = "0.1.0"
description = "Type stubs for appdirs"
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/repo-helper/appdirs-stubs"
"Issue Tracker" = "https://github.com/repo-helper/appdirs-stubs/issues"
"Source Code" = "https://github.com/repo-helper/appdirs-stubs"

[tool.mkrecipe]
conda-channels = [ "repo-helper",]
extras = "all"
license-key = "MIT"
package = "appdirs-stubs"

[tool.whey]
base-classifiers = []
python-versions = [ "3.6",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "appdirs-stubs"
